@@ -3054,6 +3054,7 @@ GEN     gpolvar(GEN y);
 GEN     gppadicprec(GEN x, GEN p);
 GEN     gppoldegree(GEN x, long v);
 long    gprecision(GEN x);
+GEN     gpserprec(GEN x, long v);
 GEN     greal(GEN x);
 GEN     grndtoi(GEN x, long *e);
 GEN     ground(GEN x);
@@ -3127,6 +3128,7 @@ GEN     scalarpol(GEN x, long v);
 GEN     scalarpol_shallow(GEN x, long v);
 GEN     scalarser(GEN x, long v, long prec);
 GEN     ser_unscale(GEN P, GEN h);
+long    serprec(GEN x, long v);
 GEN     serreverse(GEN x);
 GEN     simplify(GEN x);
 GEN     simplify_shallow(GEN x);
