@@ -1,13 +1,6 @@
 +oo
 +oo
 I
-1 + O(3^3) + I
-O(2^3)
-1 + O(2^3)
-x + (1 + O(3^3))
-(1 + O(3^3))/((1 + O(5^3))*x)
-Mod(1 + O(3^3), (1 + O(3^3))*x)
-[1 + O(3^3), 2]
 77
 57
 128
@@ -15,6 +8,10 @@ Mod(1 + O(3^3), (1 + O(3^3))*x)
 1 + O(3^5)
 1
 38
++oo
+3
++oo
+2
 +oo
   ***   at top-level: padicprec(0,"")
   ***                 ^---------------
@@ -30,4 +27,4 @@ Mod(1 + O(3^3), (1 + O(3^3))*x)
 3
 3
 4
-Total time spent: 0
+Total time spent: 4
