@@ -460,6 +460,7 @@ BA 173- [libpari] ZpXQ_div, ZpXQX_divrem, ZpXQX_digits
    175- [libpari] idealinv_HNF, idealinv_HNF_Z
    176- [libpari] QM_charpoly_ZX_bound
 BA 177- libpari support for low-res plot()
+   178- GP function serprec
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
@@ -592,6 +593,9 @@ BA 75- rename FlxqX_pow to FlxqX_powu
        a canonical defining polynomial.
    78- precision(0), bitprecision(0), padicprec(0,p) now all return +oo
        under GP [ used to return LONG_MAX ]
+   79- meaning of precision(x, n) no longer depends on the type of x: it now
+       always refers to floating point precision. Before the change:
+       precision([O(2),O(3),O(x)], 10) -> [O(2^10),O(3^10),O(x^10)]
 
 Removed
    1- deprecated functions nfbasis0, nfdisc0, factorpadic0
